--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                            Test your luck and strategy in the ultimate game of choices!
                         </p>
       
-                        <a href="Sps\\index.html" class="card__button">
+                        <a href="sps\\index.html" class="card__button">
                            Play now
                         </a>
                      </div>
